--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "@tsconfig/svelte": "^3.0.0",
+    "dart-sass": "^1.25.0",
+    "sass": "^1.54.3",
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.0",
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.0"
+  },
+  "dependencies": {
+    "svelte-material-ui": "^6.0.0"
   }
 }
